--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "node server.js",
 		"build": "next build",
-		"start": "NODE_ENV=production node server.js",
+		"start": "NODE_ENV=production ts-node server.ts",
 		"lint": "next lint"
 	},
 	"dependencies": {
@@ -23,6 +23,7 @@
 		"@types/react-dom": "^19",
 		"eslint": "^9",
 		"eslint-config-next": "15.3.2",
+		"ts-node": "^10.9.2",
 		"typescript": "^5"
 	}
 }
